--- a/rrg-gatsby/package.json
+++ b/rrg-gatsby/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-typography": "^1.7.10",
     "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-remark": "^1.7.26",
     "glamorous": "^4.11.2",
     "typography-theme-fairy-gates": "^0.15.11"
   },
