--- a/rrg-gatsby/package.json
+++ b/rrg-gatsby/package.json
@@ -6,11 +6,18 @@
   "dependencies": {
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
+    "gatsby-plugin-catch-links": "^1.0.14",
+    "gatsby-plugin-google-analytics": "^1.0.15",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-remove-trailing-slashes": "^1.0.3",
+    "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-plugin-twitter": "^1.0.14",
     "gatsby-plugin-typography": "^1.7.10",
+    "gatsby-remark-images": "^1.5.36",
+    "gatsby-remark-responsive-iframe": "^1.4.16",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.26",
-    "glamorous": "^4.11.2",
+    "gatsby-transformer-sharp": "^1.6.16",
     "typography-theme-fairy-gates": "^0.15.11"
   },
   "keywords": [
@@ -25,6 +32,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "prettier": "^1.9.2"
   }
 }
